Fix font size in Encap & Gen Syn FTR Menu, for it is too small

--- a/styles.css
+++ b/styles.css
@@ -531,7 +531,7 @@ footer {
     }
     
     .gen-syn-btn, .gen-btn {
-        font-size: 0.45rem;
+        font-size: 0.5rem;
     }
 
     .modularity-syn-btn, .mod-btn {
